--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "@types/firefox": "^0.0.34",
+    "@types/firefox-webext-browser": "^120.0.4"
   }
 }
