feat: small changes

--- a/manifests/firefox.manifest.json
+++ b/manifests/firefox.manifest.json
@@ -3,12 +3,7 @@
   "name": "Better Su",
   "version": "1.0",
   "description": "Tracks URLs accessed within a website and marks them visually.",
-  "permissions": [
-    "tabs",
-    "storage",
-    "*://kemono.su/*",
-    "*://coomer.su/*"
-  ],
+  "permissions": ["tabs", "storage", "*://kemono.su/*", "*://coomer.su/*"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
